<resources>
    <string name="app_name">Weather Compare</string>
    <string name="button_login">Login</string>
    <string name="button_register">Regístrate</string>
    <string name="TextRegistro">Regístrate!</string>
    <string name="button_register2">Regístrame!</string>
    <string name="Int_name">Introduce tu nombre</string>
    <string name="Int_email">Introduce tu email</string>
    <string name="Int_password">Introduce tu password</string>
    <string name="toast_registro">Vas a registrarte!</string>
    <string name="TextLogin">Accede con tus datos de usuario!</string>
    <string name="button_login2">Login!</string>
    <string name="toast_login">Vas a loguearte!</string>
    <string name="toast_loginValido">Inicio de sesión correcto</string>
    <string name="toast_loginInvalido">Datos incorrectos</string>
    <string name="toast_registroExito">Usuario registrado con éxito</string>
    <string name="toast_emailIncorrecto">Debes de introducir un email válido \"ejemplo@gmail.com\"</string>
    <string name="toast_passwordIncorrecto">Introduce una contraseña con al menos 8 caracteres alfa numéricos y alguna mayúscula</string>
    <string name="button_comparativa">Hacer comparativa</string>
    <string name="button_historial">Revisa tu historial</string>
    <string name="TextBienvenida">Bienvenid@</string>
    <string name="toast_EmailExistente">Email de usuario ya registrado</string>
    <string name="button_logout">Logout</string>
    <string name="toast_logout">Sesión cerrada</string>
    <string name="TextComparacion">Busca las localidades</string>
    <string name="TextBusqueda1">Busqueda 1</string>
    <string name="TextBusqueda2">Busqueda 2</string>
    <string name="button_comparativa2">Compara el clima!</string>
    <string name="TextSelectProv">Selecciona una provincia</string>
    <string name="TextSelectMun">Selecciona un municipio</string>
    <string name="TextErrorCodProv">Error al obtener código de provincia</string>
    <string name="TextResultadoComparacion">Resultado de la comparación</string>
    <string name="TextTempMax">Temp Max</string>
    <string name="TextTempMin">Temp min</string>
    <string name="TextTempMed">Temp med</string>
    <string name="TextVRacha">Viencho racha</string>
    <string name="TextVMed">Viento media</string>
    <string name="TextPrec">% Precipitación</string>
    <string name="TextEstadoCielo">Estado cielo</string>
    <string name="TextHistorial">Tu historial</string>
    <string name="toast_historial">Revisa tu historial</string>
    <string name="toast_Compara">Compara el clima</string>
</resources>